test/corpus/fail/lib/decs.mo
=========
lib/decs.mo
=========

let x = 666

---

(source_file
  (let_dec
    (var_pat
      (identifier))
    (lit_exp
      (int_literal))))
